# OrderMatchingEngine

./: CMakeLists.txt  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderEngine.cpp  README.md  Server.cpp  Server.h  client.py  main.cpp
.github/workflows/: c-cpp.yml
clients/: client.cpp  client.py
tests/: test_build.py  test_client_server.py
v1_self_contained/: CMakeLists.txt  OrderEngine.cpp
